--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -58,6 +58,11 @@
 @define-color progressbar_background_b #2465ba;
 @define-color progressbar_pattern #000000;
 
+@define-color entry_background_a #848684;
+@define-color entry_background_b #babcba;
+@define-color entry_background_c #e7e8e7;
+@define-color entry_background_d #f3f3f3;
+
 @define-color focused_entry_border @theme_selected_bg_color;
 @define-color focused_entry_inset alpha (@theme_selected_bg_color, 0.50);
 
