--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -134,6 +134,8 @@ GtkStatusbar {
     -GtkEntry-progress-border: 0;
 
     /* border-image defined in the -assets variants */
+
+    color: @entry_text_color;
 }
 
 .entry,
@@ -142,7 +144,7 @@ GtkComboBox.combobox-entry .button:prelight {
     background-image: -gtk-gradient(linear,
                                     left top, left bottom,
                                     from(@entry_background_a),
-                                    color-stop(0.30, @entry_background_b),
+                                    color-stop(0.20, @entry_background_b),
                                     color-stop(0.85, @entry_background_c),
                                     to(@entry_background_d));
 }
@@ -493,6 +495,12 @@ GtkComboBox.combobox-entry .button {
     border-radius: 0 3 3 0;
 
     padding: 2 3;
+    -adwaita-focus-fill-color: alpha (@theme_base_color, 0.0);
+}
+
+GtkComboBox.combobox-entry .button *:active,
+GtkComboBox.combobox-entry .button *:prelight {
+    color: @internal_element_prelight;
 }
 
 GtkComboBox.combobox-entry .button:active,
@@ -500,11 +508,11 @@ GtkComboBox.combobox-entry .button:hover:active {
     background-image: -gtk-gradient(linear,
                                     left top, left bottom,
                                     from(shade(@entry_background_a, 0.95)),
-                                    color-stop(0.30, shade(@entry_background_b, 0.95)),
+                                    color-stop(0.20, shade(@entry_background_b, 0.95)),
                                     color-stop(0.85, shade(@entry_background_c, 0.95)),
                                     to(shade(@entry_background_d, 0.95)));
 
-    box-shadow: 1 0 inset shade(@frame_color, 1.50), 2 0 inset shade(@frame_color, 1.60);
+    box-shadow: 1 0 inset shade(@frame_color, 1.50);
 }
 
 /**************
