--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -88,12 +88,15 @@
 @define-color progressbar_background_b #1f72c6;
 @define-color progressbar_pattern #000000;
 
+@define-color entry_text_color @theme_text_color;
+
 @define-color entry_background_a #e1e1e1;
 @define-color entry_background_b #f8f8f8;
 @define-color entry_background_c #fafafa;
 @define-color entry_background_d @theme_base_color;
 
 @define-color internal_element_color #888a85;
+@define-color internal_element_prelight @theme_text_color;
 @define-color internal_element_insensitive shade (@internal_element_color, 1.6);
 
 @define-color scale_fill @insensitive_border_color;
