entry: theme symbolic icons inside text entries

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -168,6 +168,14 @@ GtkComboBox.combobox-entry .button:prelight {
     -adwaita-progressbar-pattern: none;
 }
 
+.entry.image {
+    color: @internal_element_color;
+}
+
+.entry.image:prelight {
+    color: @internal_element_prelight;
+}
+
 /*****************
  * GtkSpinButton *
  *****************/
