--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -88,6 +88,10 @@ GtkWindow {
     color: @theme_tooltip_fg_color;
 }
 
+.tooltip * {
+    background-color: @theme_tooltip_bg_color;
+}
+
 .grip {
     background-color: shade (@inactive_frame_color, 0.93);
 }
