--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1534,9 +1534,13 @@ WnckPager, WnckTasklist {
     color: @os_chrome_fg_color;
 }
 
-GsmFailWhaleDialog,
-GsmFailWhaleDialog * {
+GsmFailWhaleDialog {
     background-color: @os_chrome_bg_color;
     background-image: none;
     color: @os_chrome_fg_color;
+}
+
+GsmFailWhaleDialog * {
+    background-color: @os_chrome_bg_color;
+    background-image: none;
 }
