--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
@@ -192,39 +192,37 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
     border-image: url("assets/primary-toolbar-button-active-border-dark.svg") 4 / 4 stretch;
 }
 
-.primary-toolbar .toolbar .raised .button,
-.primary-toolbar.toolbar .raised .button,
-.primary-toolbar .toolbar .raised.button,
-.primary-toolbar.toolbar .raised.button {
+.toolbar .raised .button,
+.toolbar .raised.button {
     border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 stretch;
 }
 
 
 /* nth-child for linked areas */
-.primary-toolbar.toolbar .raised.linked.button,
-.primary-toolbar.toolbar .raised.linked.button:active,
-.primary-toolbar.toolbar .raised.linked.button:active:hover,
-.primary-toolbar.toolbar .raised.linked .button,
-.primary-toolbar.toolbar .raised.linked .button:active,
-.primary-toolbar.toolbar .raised.linked .button:active:hover {
+.toolbar .raised.linked.button,
+.toolbar .raised.linked.button:active,
+.toolbar .raised.linked.button:active:hover,
+.toolbar .raised.linked .button,
+.toolbar .raised.linked .button:active,
+.toolbar .raised.linked .button:active:hover {
     border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 0 stretch;
 }
 
-.primary-toolbar.toolbar .raised.linked.button:nth-child(first) ,
-.primary-toolbar.toolbar .raised.linked.button:active:nth-child(first),
-.primary-toolbar.toolbar .raised.linked.button:active:hover:nth-child(first),
-.primary-toolbar.toolbar .raised.linked:nth-child(first) .button,
-.primary-toolbar.toolbar .raised.linked:nth-child(first) .button:active,
-.primary-toolbar.toolbar .raised.linked:nth-child(first) .button:active:hover {
+.toolbar .raised.linked.button:nth-child(first) ,
+.toolbar .raised.linked.button:active:nth-child(first),
+.toolbar .raised.linked.button:active:hover:nth-child(first),
+.toolbar .raised.linked:nth-child(first) .button,
+.toolbar .raised.linked:nth-child(first) .button:active,
+.toolbar .raised.linked:nth-child(first) .button:active:hover {
     border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 0 4 4 stretch;
 }
 
-.primary-toolbar.toolbar .raised.linked.button:nth-child(last),
-.primary-toolbar.toolbar .raised.linked.button:active:nth-child(last),
-.primary-toolbar.toolbar .raised.linked.button:active:hover:nth-child(last),
-.primary-toolbar.toolbar .raised.linked:nth-child(last) .button,
-.primary-toolbar.toolbar .raised.linked:nth-child(last) .button:active,
-.primary-toolbar.toolbar .raised.linked:nth-child(last) .button:active:hover {
+.toolbar .raised.linked.button:nth-child(last),
+.toolbar .raised.linked.button:active:nth-child(last),
+.toolbar .raised.linked.button:active:hover:nth-child(last),
+.toolbar .raised.linked:nth-child(last) .button,
+.toolbar .raised.linked:nth-child(last) .button:active,
+.toolbar .raised.linked:nth-child(last) .button:active:hover {
     border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 4 4 0 stretch;
 }
 
