--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -32,8 +32,6 @@
     -GtkIMHtml-hyperlink-color: @link_color;
     -GtkHTML-link-color: @link_color;
 
-    -GtkWidget-wide-separators: 1;
-
     -WnckTasklist-fade-overlay-rect: 0;
 
     -GtkWidget-focus-padding: 2;
@@ -103,6 +101,10 @@ GtkWindow {
     border-style: solid;
     border-width: 1;
     border-radius: 2;
+}
+
+.separator {
+    color: darker (@theme_bg_color);
 }
 
 .pane-separator {
@@ -345,7 +347,7 @@ GtkScale.progressbar {
 }
 
 GtkScale.mark {
-    background-color: shade (@theme_bg_color, 0.56);
+    color: shade (@theme_bg_color, 0.56);
 }
 
 /**********
@@ -499,6 +501,13 @@ GtkComboBox {
 
     -GtkComboBox-arrow-scaling: 0.5;
     -GtkComboBox-shadow-type: none;
+}
+
+GtkComboBox .separator {
+    /* always disable separators */
+    -GtkWidget-wide-separators: true;
+    -GtkWidget-horizontal-separator: 0;
+    -GtkWidget-vertical-separator: 0;
 }
 
 GtkComboBox .entry {
@@ -729,12 +738,9 @@ GtkTreeMenu .menuitem * {
 }
 
 .menuitem.separator {
-    border-color: @menu_separator;
-    border-style: solid;
-    border-width: 1;
+    color: @menu_separator;
 
     -GtkSeparatorMenuItem-horizontal-padding: 0;
-    -GtkWidget-separator-height: 1;
 }
 
 .menuitem.check,
@@ -942,12 +948,7 @@ GtkTreeMenu .menuitem * {
 
 .primary-toolbar .toolbar GtkSeparatorToolItem,
 .primary-toolbar.toolbar GtkSeparatorToolItem {
-    -GtkWidget-wide-separators: 1;
-    -GtkWidget-separator-width: 1;
-
-    border-style: solid;
-    border-width: 1;
-    border-color: shade (@theme_bg_color, 0.56);
+    color: shade (@theme_bg_color, 0.56);
 }
 
 /* primary toolbar raised buttons */
@@ -1274,10 +1275,6 @@ GtkTreeView {
     -adwaita-focus-border-radius: 2;
     -adwaita-focus-border-dashes: 1;
     -adwaita-focus-border-color: mix(@theme_selected_fg_color, @theme_selected_bg_color, 0.30);
-}
-
-GtkTreeView.separator {
-    background-color: darker (@theme_bg_color);
 }
 
 column-header {
