--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -312,6 +312,7 @@ GtkScale.slider:insensitive {
     border-radius: 0;
     border-style: none;
 
+    color: alpha(@theme_base_color, 0.0);
     background-color: alpha(@theme_base_color, 0.0);
 
     /* background-image in -assets variant */
