pathbar: apply a linked style to the filechooser pathbar buttons
This requires GTK+ 3.1.18 to work properly, which added nth-child()
support in GtkPathBar.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1045,6 +1045,34 @@ GtkTreeMenu .menuitem * {
     border-width: 1 1 1 0;
 }
 
+GtkPathBar .button,
+GtkPathBar .button:active,
+GtkPathBar .button:active:hover {
+    border-image: none;
+    border-style: solid;
+    border-width: 1 0 1 1;
+    border-radius: 0;
+
+    border-color: @button_border;
+    box-shadow: 1 0 inset shade(@button_border, 1.40);
+}
+
+GtkPathBar .button:active,
+GtkPathBar .button:active:hover {
+    box-shadow: 1 0 inset shade(@button_border, 1.20);
+}
+
+GtkPathBar .button:nth-child(first),
+GtkPathBar .button:active:nth-child(first) {
+    border-radius: 3 0 0 3;
+}
+
+GtkPathBar .button:nth-child(last),
+GtkPathBar .button:active:nth-child(last) {
+    border-width: 1;
+    border-radius: 0 3 3 0;
+}
+
 .primary-toolbar.toolbar .entry {
     background-color: @primary_toolbar_entry_bg;
     color: @primary_toolbar_entry_fg;
