--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -177,11 +177,14 @@ GtkComboBox.combobox-entry .button:prelight,
     -adwaita-progressbar-pattern: none;
 }
 
-.entry.image {
+/*******************
+ * Symbolic images *
+ *******************/
+.image {
     color: @internal_element_color;
 }
 
-.entry.image:prelight {
+.image:prelight {
     color: @internal_element_prelight;
 }
 
