--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -94,6 +94,7 @@ GtkWindow {
     background-color: shade (@inactive_frame_color, 0.93);
 }
 
+.view.rubberband,
 .rubberband {
     background-color: alpha (@theme_selected_bg_color, 0.35);
 
