--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -150,3 +150,4 @@
 @import url("gtk-widgets-assets-dark.css");
 @import url("gtk-widgets.css");
 @import url("gtk-widgets-dark-overrides.css");
+@import url("gnome-applications.css");
