nautilus: ensure the searchbar icon has the right color
See also
http://git.gnome.org/browse/nautilus/commit/?id=0ae354ce50394d18be01ca670fdf190d63c1591e
for more rationale.

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -61,6 +61,10 @@ NautilusSearchBar .entry {
     -GtkEntry-inner-border: 3;
 }
 
+NautilusSearchBar .entry.image {
+    color: @nautilus_cluebar_color;
+}
+
 .nautilus-cluebar-label {
     font: bold;
     color: @theme_base_color;
