dnd: add a style selector for the dnd style class
It's a stock GTK class and it's used by Nautilus, so it should be
supported here.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -124,6 +124,13 @@ GtkStatusbar {
     -GtkStatusbar-shadow-type: none;
 }
 
+.dnd {
+    border-width: 1;
+    border-style: solid;
+    border-color: @theme_selected_bg_color;
+    border-radius: 0;
+}
+
 /****************
  * Text Entries *
  ****************/
