combobox-entry: switch radius/borders when in RTL mode
Don't assume the entry is always the first child and the button is
always the last. Instead, use nth-child(first) and nth-child(last) to
decide where the junction should be drawn.

https://bugzilla.gnome.org/show_bug.cgi?id=658507

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
@@ -93,15 +93,34 @@
 }
 
 .primary-toolbar GtkComboBox.combobox-entry .button,
-GtkComboBox.combobox-entry .button {
+GtkComboBox.combobox-entry .button,
+.primary-toolbar GtkComboBox.combobox-entry .button:nth-child(last),
+GtkComboBox.combobox-entry .button:nth-child(last) {
     border-image: url("assets/entry-border-normal.svg") 2 / 2 2 2 0 stretch;
 }
 
 .primary-toolbar GtkComboBox.combobox-entry .button:active,
 .primary-toolbar GtkComboBox.combobox-entry .button:hover:active,
 GtkComboBox.combobox-entry .button:active,
-GtkComboBox.combobox-entry .button:hover:active {
+GtkComboBox.combobox-entry .button:hover:active,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:nth-child(last),
+.primary-toolbar GtkComboBox.combobox-entry .button:hover:active:nth-child(last),
+GtkComboBox.combobox-entry .button:active:nth-child(last),
+GtkComboBox.combobox-entry .button:hover:active:nth-child(last) {
     border-image: url("assets/combobox-entry-border-active.svg") 2 / 2 2 2 0 stretch;
+}
+
+/* for RTL languages */
+.primary-toolbar GtkComboBox.combobox-entry .button:nth-child(first),
+GtkComboBox.combobox-entry .button:nth-child(first) {
+    border-image: url("assets/entry-border-normal.svg") 2 / 2 0 2 2 stretch;
+}
+
+.primary-toolbar GtkComboBox.combobox-entry .button:active:nth-child(first),
+.primary-toolbar GtkComboBox.combobox-entry .button:hover:active:nth-child(first),
+GtkComboBox.combobox-entry .button:active:nth-child(first),
+GtkComboBox.combobox-entry .button:hover:active:nth-child(first) {
+    border-image: url("assets/combobox-entry-border-active.svg") 2 / 2 0 2 2 stretch;
 }
 
 GtkScale.trough,
