--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -690,23 +690,6 @@ GtkTreeMenu.menu {
     background-color: @theme_base_color;
 }
 
-GtkTreeMenu.menu.button {
-    background-image: none;
-    background-color: @theme_base_color;
-    color: @internal_element_color;
-}
-
-GtkTreeMenu.menu.button:hover {
-    background-image: none;
-    background-color: @theme_base_color;
-    color: @theme_text_color;
-}
-
-GtkTreeMenu.menu.button:insensitive {
-    background-color: @theme_base_color;
-    color: lighter(@internal_element_color);
-}
-
 GtkTreeMenu .menuitem {
     padding: 2;
 
@@ -724,6 +707,35 @@ GtkTreeMenu .menuitem * {
     color: @menu_fg_color;
     padding: 0;
     border-style: none;
+}
+
+.menu.button {
+    background-image: none;
+    background-color: @theme_base_color;
+    color: @internal_element_color;
+
+    border-image: none;
+    border-style: none;
+    border-width: 0;
+}
+
+.menu.button:hover {
+    background-image: none;
+    background-color: @theme_base_color;
+    color: @theme_text_color;
+
+    border-image: none;
+    border-style: none;
+    border-width: 0;
+}
+
+.menu.button:insensitive {
+    background-color: @theme_base_color;
+    color: lighter(@internal_element_color);
+
+    border-image: none;
+    border-style: none;
+    border-width: 0;
 }
 
 /* this controls the general appearance of the menubar */
