fallback: add a missing selector

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1604,6 +1604,7 @@ GtkCalendar.highlight {
  **********************/
 
 .gnome-panel-menu-bar,
+PanelToplevel,
 PanelWidget,
 PanelAppletFrame,
 PanelApplet {
