--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -82,12 +82,16 @@ GtkWindow {
 .tooltip {
     padding: 4 4;
     border-style: none;
-    background-color: @theme_tooltip_bg_color;
+    border-radius: 5;
+
+    background-color: alpha(@theme_tooltip_bg_color, 0.90);
     color: @theme_tooltip_fg_color;
+
+    text-shadow: 1 1 black;
 }
 
 .tooltip * {
-    background-color: @theme_tooltip_bg_color;
+    background-color: alpha(@theme_tooltip_bg_color, 0.90);
 }
 
 .grip {
