treeview: match column-header.button in addition to column-header .button
Some custom widgets render their column header as part of the canvas,
and use custom canvas items with a .button style class to simulate
button children. Support that.
This kind of behavior is seen e.g. in Evolution's ETable implementation.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1440,6 +1440,7 @@ column-header {
     padding: 1 2;
 }
 
+column-header.button,
 column-header .button {
     border-width: 0 1 1 0;
     border-radius: 0;
@@ -1455,6 +1456,7 @@ column-header .button GtkArrow {
     color: @internal_element_color;
 }
 
+column-header:nth-child(last).button,
 column-header:nth-child(last) .button {
     border-width: 0 0 1 0;
 }
