--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -83,6 +83,7 @@
 
 @define-color switch_slider_color #eeeeec;
 @define-color switch_slider_border #2a79cb;
+@define-color switch_slider_insensitive_bg @insensitive_bg_color;
 
 @define-color progressbar_background_a #76b0ec;
 @define-color progressbar_background_b #1f72c6;
