--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -34,8 +34,8 @@
 @define-color button_raised_active_gradient_color_b @button_raised_gradient_color_a;
 
 @define-color insensitive_bg_color alpha(#0b0b0d, 0.0);
-@define-color insensitive_fg_color alpha(#717171, 0.50);
-@define-color insensitive_border_color alpha(#717171, 0.50);
+@define-color insensitive_fg_color #535555;
+@define-color insensitive_border_color #535555;
 
 @define-color inactive_frame_color shade (@theme_bg_color, 0.8);
 
@@ -48,6 +48,7 @@
 
 @define-color switch_slider_color #111113;
 @define-color switch_slider_border #a5b8cc;
+@define-color switch_slider_insensitive_bg @insensitive_border_color;
 
 @define-color highlighted_border @button_border;
 @define-color internal_element_color #888a85;
