--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -85,6 +85,8 @@
 @define-color switch_slider_border #2a79cb;
 @define-color switch_slider_insensitive_bg @insensitive_bg_color;
 
+@define-color switch_trough_active_color @theme_base_color;
+
 @define-color progressbar_background_a #76b0ec;
 @define-color progressbar_background_b #1f72c6;
 @define-color progressbar_pattern #000000;
